<resources>
    <string name="app_name">GrazProject</string>
    <!-- Strings related to login -->
    <string name="app_title">Сознательный Гражданин</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Недействительное имя</string>
    <string name="invalid_password">Пароль должен быть >5 знаков</string>
    <string name="invalid_user">Недействительнвй пользователь</string>
    <string name="login_failed">"Вход не выполнен"</string>
    <string name="forgot_password">"Забыли пароль?"</string>

    <!-- Strings related to common -->
    <string name="save">Сохранить</string>
    <string name="next">Продолжить</string>
    <string name="company_cite">"http://eco-choice63.tilda.ws/"</string>

    <!-- Strings related to about -->
    <string name="about_program">
        "Компания <font color="#00A550">«ЭкоВыбор»</font> занимается сортировкой,
        вывозом и переработкой различных отходов, а также вывоз строительного мусора.\n
        Цель создания проекта – повышение гражданской сознательности населения.\n\n
        Сайт компании: \n
        <font color="#00A550"><i>http://eco-choice63.tilda.ws/</i></font>"</string>
    <string name="about_title">О программе</string>

    <!-- Strings related to password reset -->
    <string name="registerRP">Если вы не являетесь пользователем проекта, <u>зарегистрируйтесь</u></string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="email_reset">Email</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Strings related to register -->
    <string name="register_title">Регистрация</string>
    <string name="userName">Ваше имя или псевдоним</string>
    <string name="email">Email</string>
    <string name="passwordSet">Придумайте пароль</string>
    <string name="passwordRepeat">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="agreementRules">Я согласен с <u>правилами проекта Сознательный Гражданин</u></string>
    <string name="agreementMailing">Я хочу получать рассылку о новостях проекта на e-mail</string>

    <!-- Strings related to user data register -->
    <string name="user_data_title">Ваши данные</string>
    <string name="user_surname">Фамилия</string>
    <string name="user_name">Имя</string>
    <string name="user_middle_name">Отчество</string>
    <string name="user_phone">Номер телефона</string>
    <string name="user_town">Город</string>
    <string name="user_street">Улица</string>
    <string name="user_house">Дом</string>
    <string name="user_apartment">Квартира</string>

    <!-- Strings related to new password -->
    <string name="new_password_title">Смена пароля</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторите пароль</string>
    <string name="title_activity_new_password">NewPasswordActivity</string>

    <!-- Strings related to project rules -->
    <string name="project_rules_title">Правила проекта</string>
    <string name="project_rules_text">Правила проекта Сознательный Гражданин</string>


    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_selections">Рубрики</string>
    <string name="menu_my_messages">Мои сообщения</string>
    <string name="menu_all_messages">Все сообщения</string>
    <string name="sections_title">Рубрики</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_user_profile">Профиль</string>
    <string name="menu_create_message">Создать сообщение</string>

    <string name="reset_email_mes">На ваш почтовый ящик высланы дальнейшие инструкции по смене пароля</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="parking_section">Парковки</string>
    <string name="parking_section_info">Нарушение парковки</string>
    <string name="section_expired_products">Просроченные продукты</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="CreateMessageTitle">Опишите проблему</string>
    <string name="MessageTheme">Тема сообщения</string>
    <string name="MessageTextMain">Текст сообщения (максимум 600 символов)</string>
    <string name="PostMessage">Опубликовать сообщение</string>
    <string name="AddPhoto">Добавить фото</string>
    <string name="newMessageTitle">Новое сообщение</string>
    <string name="addedPhotos">Добавленные фото…</string>

    <string name="picture">Фото</string>
    <string name="select_intro">Long-press a thumbnail to add an image</string>
    <string name="show_intro">Press a thumbnail to display at larger size</string>

    <string name="cluster_tap_message">Tapped cluster with %d items</string>
    <!-- Strings related to common -->
    <string name="unknown_error_message">Unknown error</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="map">Map</string>/string

    <string name="search">Search</string>
    <string name="suggest">Suggest</string>
    <string name="panorama">Panorama</string>
    <string name="custom_layer">Custom Layer</string>
    <string name="masstransit_routing">Masstransit routing</string>
    <string name="geo_json_test">Geo JSON</string>
    <string name="clustering">Clustering</string>
    <string name="jams">Jams</string>
    <string name="selection">Selection</string>

    <string name="package_name">com.yandex.mapkitdemo</string>
    <!-- Strings related to user data register -->
    <string name="mapobjects">Map Objects</string>
    <!-- Strings related to new password -->
    <string name="map_sublayers">Map Sublayers</string>
    <string name="sublayer_buildings_before_mo_geometry">Render Buildings before Map Object Geometry</string>
    <string name="sublayer_buildings_after_mo_geometry">Render Buildings after Map Object Geometry</string>
    <!-- Strings related to project rules -->
    <string name="customization">Customization</string>
    <string name="user_location">User Location</string>
    <string name="driving">Driving</string>
    <string name="not_found_error_message">Not found</string>
    <string name="Samara">Самара</string>
    <string name="incident_adress">Адрес происшествия</string>
    <string name="section_incident_done">Раздел происшествия</string>
    <string name="Send">Отправить</string>
    <string name="FeedBackMessage">Напишите нам</string>
    <string name="FeedbackMess">Сообщение</string>
    <string name="SaveOnDevice">Сохранить на устройство</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="MessageDate">Дата происшествия</string>
    <string name="MyProblem">Моя проблема</string>

</resources>