<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sections"
            android:title="@string/menu_selections" />
        <item
            android:id="@+id/nav_my_messages"
            android:title="@string/menu_my_messages" />
        <item
            android:id="@+id/nav_all_messages"
            android:title="@string/menu_all_messages" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/menu_user_profile" />

    </group>
    <group >
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback" />
    </group>
</menu>