<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sections">

    <fragment
        android:id="@+id/nav_sections"
        android:name="com.project.grazproject.ui.sections.SectionsFragment"
        android:label="@string/menu_selections"
        tools:layout="@layout/fragment_sections" />

    <fragment
        android:id="@+id/nav_my_messages"
        android:name="com.project.grazproject.ui.myMessages.MyMessagesFragment"
        android:label="@string/menu_my_messages"
        tools:layout="@layout/fragment_my_messages" />

    <fragment
        android:id="@+id/nav_all_messages"
        android:name="com.project.grazproject.ui.allMessages.AllMessagesFragment"
        android:label="@string/menu_all_messages"
        tools:layout="@layout/fragment_all_messages" />
</navigation>