<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userProfile.UserProfileFragment">


    <TextView
        android:id="@+id/text_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <ScrollView
        android:layout_width="378dp"
        android:layout_height="571dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/profileUsername"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileEmail"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profilePassword"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/prompt_password"
                android:inputType="text|textPassword|numberPassword"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileName"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileSurname"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_surname"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileMiddleName"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_middle_name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profilePhoneNumber"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_phone"
                android:inputType="phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileTown"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_town"
                android:inputType="textShortMessage|textLongMessage"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileStreet"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_street"
                android:inputType="textShortMessage|textLongMessage"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileHouse"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_house"
                android:inputType="textShortMessage|textLongMessage"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profileApart"
                android:layout_width="316dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/user_apartment"
                android:inputType="textShortMessage|textLongMessage"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>