<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <CheckBox
        android:id="@+id/agreementMailingCB"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:checked="true"
        android:text="@string/agreementMailing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgreementRulesCB"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:text="@string/registerLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="firstStrong"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLabel"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/passwordSet"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/passwordSet"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/repeatPasswordRegister"
        android:layout_width="337dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/passwordRepeat"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSet"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreementMailingCB"
        app:layout_constraintVertical_bias="0.243" />

    <CheckBox
        android:id="@+id/AgreementRulesCB"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:checked="true"
        android:text="@string/agreementRules"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordRegister"
        app:layout_constraintVertical_bias="0.052" />
</androidx.constraintlayout.widget.ConstraintLayout>