<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newPassword.NewPasswordActivity">

    <TextView
        android:id="@+id/newPasswordTitle"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="casual"
        android:text="@string/new_password_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <EditText
        android:id="@+id/newPasswordRepeat"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/Next"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordRepeat"
        app:layout_constraintVertical_bias="0.142" />
</androidx.constraintlayout.widget.ConstraintLayout>