<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newPassword.ResetPasswordActivity">

    <TextView
        android:id="@+id/registerPR"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:layout_marginTop="76dp"
        android:text="@string/registerRP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetPassword" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="28dp"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/registerPR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail" />

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginTop="267dp"
        android:ems="10"
        android:hint="@string/email_reset"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>